# pf-bindings

./: .gitignore  Cargo.toml  Justfile  README.md  RELEASE.md
.github/workflows/: release.yml
crates/pf-bindings-c/: Cargo.toml  build.rs
crates/pf-bindings-c/bindings/: pf_bindings.h
crates/pf-bindings-c/src/: lib.rs
crates/pf-bindings-csharp/: Cargo.toml
crates/pf-bindings-csharp/bindings/: pf_bindings.h
crates/pf-bindings-csharp/src/: lib.rs  lib.udl
crates/pf-bindings-dart/: Cargo.toml  build.rs
crates/pf-bindings-dart/src/: lib.rs
crates/pf-bindings-go/: Cargo.toml  build.rs
crates/pf-bindings-go/bindings/: pf_bindings.h
crates/pf-bindings-go/src/: lib.rs
crates/pf-bindings-java/: Cargo.toml
crates/pf-bindings-java/src/: lib.rs
crates/pf-bindings-node/: Cargo.toml
crates/pf-bindings-node/src/: lib.rs
crates/pf-bindings-php/: Cargo.toml
crates/pf-bindings-php/bindings/: pf_bindings.h
crates/pf-bindings-php/src/: lib.rs
crates/pf-bindings-ruby/: Cargo.toml  build.rs
crates/pf-bindings-ruby/src/: lib.rs
crates/pf-bindings-swift/: Cargo.toml
crates/pf-bindings-swift/bindings/: pf_bindings.h
crates/pf-bindings-swift/src/: lib.rs
crates/pf-bindings-wasm/: Cargo.toml
crates/pf-bindings-wasm/src/: lib.rs
pf-bindings-java/: build.rs
scripts/: release.sh
