[workspace]
members = [
    "crates/pf-bindings-core",
    "crates/pf-bindings-node",
    "crates/pf-bindings-csharp",
    "crates/pf-bindings-go",
    "crates/pf-bindings-java",
    "crates/pf-bindings-swift",
    "crates/pf-bindings-php",
    "crates/pf-bindings-dart",
    "crates/pf-bindings-c",
    "crates/pf-bindings-wasm",
    "packages/python",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/probablyfair/pf-bindings"
version = "0.1.1"

[workspace.dependencies]
pf-core = { git = "https://github.com/probablyfair/pf-core", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
